feat(yaniv-caller): Add animation for yaniv caller

--- a/client/public/locales/en/room.json
+++ b/client/public/locales/en/room.json
@@ -7,7 +7,7 @@
     "congrats": "Well done",
     "win": "You won 🥳",
     "lose": "You lost",
-    "called": " called Yaniv!",
+    "called": "YANIV!",
     "roundWinner": "Round winner"
   },
   "menu": {
