--- a/client/public/locales/fr/room.json
+++ b/client/public/locales/fr/room.json
@@ -7,7 +7,7 @@
     "congrats": "Bravo",
     "win": "Gagné 🥳",
     "lose": "Perdu",
-    "called": " a annoncé Yaniv !",
+    "called": "YANIV !",
     "roundWinner": "Gagnant de la manche"
   },
   "menu": {
